Fix paragraph spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,7 +89,7 @@ p+* {
 }
 
 p+p {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 /* navigation */
